# py_assimilator

./: .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  robots.txt  setup.py  sitemap.xml
.github/workflows/: build_docs.yml  codeql.yml  pylint.yml
alchemy/database/: index.html
alchemy/events/: index.html
api_reference/core/: index.html
assimilator/: __init__.py
assimilator/alchemy/: __init__.py
assimilator/core/: __init__.py  exceptions.py
assimilator/database/: __init__.py  repository.py  unit_of_work.py
assimilator/events/: __init__.py  events.py  events_bus.py  outbox_relay.py
assimilator/internal/: __init__.py
assimilator/kafka/: __init__.py
assimilator/kafka_/: __init__.py
assimilator/mongo/: __init__.py
assimilator/patterns/: __init__.py  context_managers.py
assimilator/rabbit/: __init__.py
assimilator/redis/: __init__.py
assimilator/redis_/: __init__.py
concepts/: index.html
database/alchemy/: exceptions.py  repository.py  specifications.py  unit_of_work.py
database/base/: repository.py  unit_of_work.py
docs/: concepts.md  help_framework.md  index.md  new_changes.md  next_update.md  services.md  unidentified_patterns.md  video_tutorials.md
docs/alchemy/: database.md  events.md
docs/api_reference/: core.md
docs/docs_theme/: base.html
docs/internal/: database.md  events.md
docs/kafka/: events.md
docs/management/: privacy.md
docs/mongo/: database.md
docs/patterns/: database.md  events.md  important.md
docs/redis/: database.md  events.md
docs/scripts/: add_footer.js  code_examples.js  feedback.js
docs/styles/: code_examples.css
docs/tutorial/: advanced_database.md  architecture_tutorial.md  database.md  events.md  how_to_create.md  important.md
docs_theme/: base.html
events/: event_managers.py  events.py  events_bus.py  outbox_relay.py
events/alchemy/: models.py  outbox_relay.py  repository.py  (+1 more)
examples/: simplest_example.py
help_framework/: index.html
new_changes/: index.html
next_update/: index.html
py_assimilator-0.1.1/: PKG-INFO  setup.py
scripts/: add_footer.js  code_examples.js  feedback.js
search/: search_index.json
services/: index.html
styles/: code_examples.css
unidentified_patterns/: index.html
video_tutorials/: index.html
(+183 files in other folders)
